fixed NBodyProblem tests